<resources>
    <string name="app_name">淘宝</string>
    <string name="nav_bar_commodity_title">Commodity</string>
    <string name="nav_bar_me_title">Me</string>
    <string name="rmb_symbol">¥</string>
    <string name="shop">Shop</string>
    <string name="customer_service">Service</string>
    <string name="collect">Collect</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="commodity_detail">Commodity Detail</string>
    <string name="all_commodity">All Commodity</string>
    <string name="order_confirm">Confirm Order</string>
    <string name="order_submit">Submit Order</string>
    <string name="commodity_num">Commodity Number</string>
    <string name="total_title">Total:</string>
    <string name="total_num">%s pieces,</string>
    <string name="commodity_num_limit_hint">Purchase limit reached</string>
    <string name="error_hint_required">Required</string>
    <string name="error_hint_invalid_text">Only support Chinese, number, letters, spaces</string>
    <string name="error_hint_invalid_phone">Please input valid Phone Number</string>
    <string name="address_hint">Please input your address</string>
    <string name="phone_hint">Please input your phone number</string>
    <string name="name_hint">Please input your name</string>
    <string name="invalid_address">Address info invalid,please input valid address</string>
    <string name="submit_order_success">Your order was created successfully!</string>
    <string name="new_function_complete">New features are being perfected… so stay tuned!</string>
    <string name="error_hint">Something wrong, please try again later</string>
</resources>