<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="20dp"
    android:focusable="true">

    <ImageView
        android:id="@+id/shop_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/shop_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_icon"
        app:layout_constraintStart_toStartOf="@+id/shop_icon"
        app:layout_constraintTop_toBottomOf="@+id/shop_icon"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/customer_service_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/customer_service_icon"
        app:layout_constraintStart_toEndOf="@+id/shop_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customer_service_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_service"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/customer_service_icon"
        app:layout_constraintStart_toStartOf="@+id/customer_service_icon"
        app:layout_constraintTop_toBottomOf="@+id/customer_service_icon"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/collect_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/collect_icon"
        app:layout_constraintStart_toEndOf="@+id/customer_service_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/collect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collect"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/collect_icon"
        app:layout_constraintStart_toStartOf="@+id/collect_icon"
        app:layout_constraintTop_toBottomOf="@+id/collect_icon"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_add_to_cart_button"
        android:paddingHorizontal="15dp"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buy_now"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/buy_now"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_buy_button"
        android:paddingHorizontal="15dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
