<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.mall.viewmodel.OrderConfirmViewModel" />

        <variable
            name="commodity"
            type="com.example.mall.model.Commodity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_app_bar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/order_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_order_address"
                    android:padding="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/address_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/address_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/gray"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="13sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/address_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Maggie" />

                    <TextView
                        android:id="@+id/invalid_name_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/red"
                        android:textSize="11sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        tools:text="必填" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="@color/gray"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="13sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/address_icon"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        tools:text="18827881166" />

                    <TextView
                        android:id="@+id/invalid_phone_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/red"
                        android:textSize="11sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/phone"
                        app:layout_constraintTop_toBottomOf="@+id/phone"
                        tools:text="必填" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/address_hint"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:textColor="@color/gray"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="13sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/address_icon"
                        app:layout_constraintTop_toBottomOf="@+id/phone"
                        tools:text="湖北省武汉市洪山区保利国际中心" />

                    <TextView
                        android:id="@+id/invalid_address_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/red"
                        android:textSize="11sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/address"
                        app:layout_constraintTop_toBottomOf="@+id/address"
                        tools:text="必填" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/order_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_order_address"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/order_address">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/good_image"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:gravity="center"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:scaleType="fitXY"
                            bind:imageSrc="@{commodity.image}" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{commodity.description}"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/good_image"
                        app:layout_constraintTop_toTopOf="@id/good_image"
                        tools:text="iphone13" />

                    <TextView
                        android:id="@+id/rmb_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/rmb_symbol"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/price"
                        app:layout_constraintStart_toStartOf="@+id/description"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{commodity.price}"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/rmb_symbol"
                        app:layout_constraintTop_toBottomOf="@+id/description"
                        tools:text="7999" />

                    <TextView
                        android:id="@+id/good_num_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/good_num"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/good_image" />

                    <ImageView
                        android:id="@+id/qty_reduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:clickable="@{vm.reduceClickable}"
                        android:onClick="@{() -> vm.reduceCommodity()}"
                        android:src="@mipmap/reduce_good_button"
                        app:layout_constraintBottom_toBottomOf="@+id/good_num_title"
                        app:layout_constraintEnd_toStartOf="@+id/good_num"
                        app:layout_constraintTop_toTopOf="@+id/good_num_title" />

                    <EditText
                        android:id="@+id/good_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxEms="10"
                        android:maxLength="5"
                        android:minWidth="20dp"
                        android:text="@{vm.commodityQuantity.toString()}"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        app:layout_constraintBottom_toBottomOf="@+id/add_good"
                        app:layout_constraintEnd_toStartOf="@+id/add_good"
                        tools:text="1" />

                    <ImageView
                        android:id="@+id/add_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="@{vm.addClickable}"
                        android:onClick="@{() -> vm.addCommodity()}"
                        android:src="@mipmap/add_good_icon"
                        app:layout_constraintBottom_toBottomOf="@id/good_num_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/good_num_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray_app_bar"
            android:elevation="3dp"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@mipmap/back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_confirm"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:clickable="true"
            android:elevation="20dp"
            android:focusable="true">

            <TextView
                android:id="@+id/total_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@id/buy_now"
                app:layout_constraintEnd_toStartOf="@+id/total"
                app:layout_constraintTop_toTopOf="@id/buy_now"
                tools:text="共2件," />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total_title"
                app:layout_constraintBottom_toBottomOf="@+id/buy_now"
                app:layout_constraintEnd_toStartOf="@+id/rmb_symbol_total"
                app:layout_constraintTop_toTopOf="@+id/buy_now" />

            <TextView
                android:id="@+id/rmb_symbol_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/rmb_symbol"
                android:textColor="@color/orange"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/total_price"
                app:layout_constraintEnd_toStartOf="@+id/total_price" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{vm.totalPrice}"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/buy_now"
                app:layout_constraintEnd_toStartOf="@+id/buy_now"
                app:layout_constraintTop_toTopOf="@+id/buy_now"
                tools:text="11" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@id/buy_now"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_submit_order"
                android:paddingHorizontal="15dp"
                android:text="@string/order_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
